2006-12-09  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/env.c, ext/oci8/handle.c, ext/oci8/oci8.c, ext/oci8/oci8.h,
	  ext/oci8/stmt.c: add OCIFileLocator.
	* ext/oci8/lob.c: fix OCILobLocator#open to accept a second argument.
	    add OCIFileLocator#name, OCIFileLocator#set_name and
	    OCIFileLocator#exists?
	* ext/oci8/svcctx.c: add OCISvcCtx#close_all_files.
	* lib/oci8.rb.in: add OCI8::BFILE and OCI8::BindType::BFILE.

2006-12-05  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/attr.c, ext/oci8/bind.c, ext/oci8/error.c, ext/oci8/oci8.h,
	  ext/oci8/ocinumber.c, ext/oci8/oradate.c, ext/oci8/oranumber.c, 
	  ext/oci8/stmt.c: use RSTRING_LEN, RSTRING_PTR, RARRAY_LEN and RARRAY_PTR
	    macros.

2006-11-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add check code whether oci.h exists.

2006-08-20  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oraconf.rb: add error code for intel mac.
	* NEWS: add a new file.

2006-08-18  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate.hash().
	* ext/oci8/oranumber.c: OraNumber.new() now accepts a String.
	* lib/oci8.rb.in: add YAML support for OraDate and OraNumber.
	* test/test_oranumber.rb: add testcases for OraNumber.new(aString).

2006-08-17  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oci8.h, ext/oci8/bind.c, ext/oci8/stmt.c:
	    Use long instead of int to bind Fixnum.
	    http://rubyforge.org/forum/forum.php?thread_id=7955&forum_id=1078

2006-08-03  KUBO Takehiro  <kubo@jiubao.org>
	* lib/oci8.rb.in: add a workaround code on cygwin version.
	    Cygwin manages environment variables by itself. They don't
	    synchroize with Win32's ones. set some Oracle's environment
	    variables to win32.

2006-07-29  KUBO Takehiro  <kubo@jiubao.org>
	* ext/oci8/oradate.c: add OraDate#dup, OraDate#clone, OraDate#_dump
	    and OraDate._load.
	* ext/oci8/oranumber.c: add OraNumber#dup, OraNumber#clone,
	    OraNumber#_dump and OraNumber._load.